2007-09-14   Clytie Siddall <clytie@riverland.net.au>

	* configure.in: Added 'vi' to ALL_LINGUAS.

2007-08-16  Ilkka Tuohela  <hile@iki.fi>

	* configure.in: Added 'fi' to ALL_LINGUAS.

2007-07-26  Dan Williams  <dcbw@redhat.com>

    Patch from Robert Buchholz <rbu@gentoo.org>

    * src/Makefile.am
        - Add -fPIC to compile flags (#454723)

2007-06-21  Christopher Aillon  <caillon@redhat.com>

	* nm-pptp-service.name.in:
	Make the properties library path multilib friendly (#447577)

2007-04-23  Luca Ferretti  <elle.uca@libero.it>

	* configure.in: Added 'it' to ALL_LINGUAS.

2007-04-16  Ihar Hrachyshka <iharh@gnome.org>

	* configure.in: Added 'be@latin' to ALL_LINGUAS.

2007-03-21  Pema Geyleg  <pema.geyleg@gmail.com>

	* configure.in: Added 'dz' to ALL_LINGUAS

2007-03-16  Josep Puigdemont i Casamajó  <josep.puigdemont@gmail.com>

	* configure.in: Added ca to ALL_LINGUAS.

2007-03-11  David Lodge <dave@cirt.net>

	* configure.in: Added en_GB to ALL_LINGUAS

2007-03-10  Hendrik Richter  <hendrikr@gnome.org>

	* configure.in: Added "de" (German) to ALL_LINGUAS

2007-03-07  Alexander Shopov  <ash@contact.bg>

	* configure.in: Added "bg" (Bulgarian) to ALL_LINGUAS

2007-03-06  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* configure.in: Added 'fr' to ALL_LINGUAS.

2007-03-06  Ignacio Casal Quinteiro  <nacho.resa@gmail.com>

	* configure.in: Added 'gl' to ALL_LINGUAS.

2007-03-05  Priit Laes  <plaes@svn.gnome.org>

	* configure.in: Added et to LINGUAS.

2007-03-02  Leonardo Ferreira Fontenelle  <leonardof@svn.gnome.org>

	* configure.in: Added pt_BR to LINGUAS.

2006-11-01  Tambet Ingo  <tambet@ximian.com>

	* src/nm-pptp-service.c (nm_pptp_dbus_handle_start_vpn): Return
	dbus message reply instead of emitting signals on errors.
	(nm_pptp_dbus_start_vpn): Get the reply from VPN start instead of
	creating a blank one.

2006-09-27  Robert Love  <rml@novell.com>

	Patch by Tambet Ingo <tambet@ximian.com>: